@@ -69,7 +69,7 @@ enum
 {
   PTHREAD_MUTEX_STALLED,
   PTHREAD_MUTEX_STALLED_NP = PTHREAD_MUTEX_STALLED,
-  PTHREAD_MUTEX_ROBUST_NP,
+  PTHREAD_MUTEX_ROBUST,
   PTHREAD_MUTEX_ROBUST_NP = PTHREAD_MUTEX_ROBUST
 };
 #endif
